# unarchiver

./: .gitignore  Cargo.toml  MAS_SUBMISSION_GUIDE.md  PRIVACY.md  README.md  TESTING.md  WORKSPACE_STRUCTURE.md  biome.json  bump_version.sh  create_mas_package.sh  index.html  package.json  sign_for_mas.sh  vite.config.ts  vitest.config.ts
crates/: .gitignore  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/extractor/: Cargo.toml
crates/extractor/src/: error.rs  extract.rs  lib.rs  probe.rs  safety.rs  types.rs
crates/extractor/tests/: extract_tests.rs  probe_tests.rs
crates/src/lib/bindings/: ArchiveEntry.ts  ExtractStats.ts
docs/: FASTLANE_QUICK_START.md  MAS_RELEASE_CHECKLIST.md  TYPE_GENERATION.md
quick-action/: README.md  install-quick-action.sh  uninstall-quick-action.sh
quick-action/Extract Here.workflow/Contents/: Info.plist  document.wflow
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.mas.inherit.plist  entitlements.mas.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/lib/bindings/: CompletionEvent.ts  ExtractOptionsDTO.ts  ProgressEvent.ts
src/components/: ArchivePreview.test.tsx  ArchivePreview.tsx  DropZone.tsx  FileExplorer.tsx  MainLayout.tsx  PasswordPrompt.tsx  PermissionDialog.tsx  QueueList.tsx  Settings.tsx  SplitExtractButton.tsx  ToastContainer.tsx  Toolbar.tsx  index.ts
src/lib/: api.ts  store.ts  toast.ts  types.ts
src/lib/bindings/: ArchiveEntry.ts  ArchiveInfo.ts  CompletionEvent.ts  ExtractOptionsDTO.ts  ExtractStats.ts  FileSystemEntry.ts  JobStatus.ts  PasswordRequiredEvent.ts  ProgressEvent.ts  README.md  SettingsData.ts
src/test/: README.md  setup.ts  utils.tsx  vitest.d.ts
