[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/extractor",
    "crates/cli",
]

[workspace.dependencies]
# Shared dependencies across workspace
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
# Optimize for size and performance
opt-level = "z"
lto = true
codegen-units = 1
strip = true
