[package]
name = "unarchiver"
version = "1.1.1"
description = "A secure archive extraction application for macOS"
authors = ["you"]
edition = "2021"
default-run = "unarchiver"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "unarchiver_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "unarchiver"
path = "src/main.rs"

[[bin]]
name = "export_types"
path = "src/bin/export_types.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Additional dependencies
uuid = { version = "1", features = ["v4", "serde"] }
parking_lot = "0.12"
ts-rs = "9.0"
dirs = "5.0"

# Local dependencies
extractor = { path = "../crates/extractor" }
tauri-plugin-deep-link = "2.4.3"
urlencoding = "2.1.3"
tauri-plugin-single-instance = "2.3.4"

