[package]
name = "extractor"
version = "0.1.0"
edition = "2021"
authors = ["you"]
description = "Core archive extraction library with security features"
license = "MIT"

[lib]
name = "extractor"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Archive handling
tempfile = "3"
ts-rs = "9.0"
zip = { version = "2", default-features = false, features = [
  "deflate",
  "bzip2",
  "aes-crypto",
] } # Exclude xz feature to avoid liblzma
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
lzma-rs = "0.3" # Pure Rust LZMA implementation (App Store compatible)
sevenz-rust2 = "0.7"
unrar = "0.5"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
zip = "2"
tar = "0.4"
flate2 = "1"
bzip2 = "0.4"
lzma-rs = "0.3"
sevenz-rust2 = "0.7"
